2012-09-18  chalabi

	* DESCRIPTION: Changed maintainer field to comply with the new CRAN
	  policy.
	* inst/unitTests/runit.garchSolver.R: Removed superfluous unitTest.
	* NAMESPACE, R/loglik-aparch.R: Removed .filter2() to avoid
	  external .Call calls.

2012-06-04  chalabi

	* R/garch-Hessian.R, inst/unitTests/runit.garchSolver.R: using now
	  optimHess to calculate the Hessian
	* ChangeLog, DESCRIPTION: updated DESCRIPTION and ChangeLog files
	* DESCRIPTION, R/garch-Hessian.R: using now optimHess to calculate
	  the Hessian

2011-09-23  mmaechler

	* DESCRIPTION: remove deprecated "LazyLoad" entry

2010-10-26  chalabi

	* NAMESPACE: updated NAMESPACE

2010-07-23  chalabi

	* inst/DocCopying.pdf: removed DocCopying.pdf license is already
	  specified in DESCRIPTION file

2010-04-14  chalabi

	* NAMESPACE: updated NAMESPACE

2009-12-08  wuertz

	* inst/unitTests/runit.snorm.R: norm test obsolete
	* NAMESPACE, R/absMoments.R, R/dist-norm.R, R/dist-normFit.R,
	  R/dist-snig.R, R/dist-snigFit.R, R/dist-stdSlider.R,
	  man/absMoments.Rd, man/dist-absMoments.Rd, man/dist-ged.Rd,
	  man/dist-gedFit.Rd, man/dist-gedSlider.Rd, man/dist-sged.Rd,
	  man/dist-sgedFit.Rd, man/dist-sgedSlider.Rd, man/dist-snorm.Rd,
	  man/dist-snormFit.Rd, man/dist-snormSlider.Rd, man/dist-sstd.Rd,
	  man/dist-sstdFit.Rd, man/dist-sstdSlider.Rd, man/dist-std.Rd,
	  man/dist-stdFit.Rd, man/dist-stdSlider.Rd: distribution functions
	  updated
	* R/dist-stdSlider.R: stdslider added

2009-12-07  wuertz

	* R/dist-absMoments.R, R/dist-ged.R, R/dist-gedFit.R,
	  R/dist-gedSlider.R, R/dist-norm.R, R/dist-normFit.R,
	  R/dist-sged.R, R/dist-sgedFit.R, R/dist-sgedSlider.R,
	  R/dist-snig.R, R/dist-snigFit.R, R/dist-snorm.R,
	  R/dist-snormFit.R, R/dist-snormSlider.R, R/dist-sstd.R,
	  R/dist-sstdFit.R, R/dist-sstdSlider.R, R/dist-std.R,
	  R/dist-stdFit.R: distribution functions updated
	* man/dist-ged.Rd, man/dist-gedFit.Rd, man/dist-gedSlider.Rd,